--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "react-icons": "^5.4.0",
     "react-pdf": "^9.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^7.3.0",
     "react-to-print": "^3.0.4",
     "tailwind-scrollbar-hide": "^1.3.1",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/node": "^22.13.10",
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
