--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "types": ["node"],
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "composite": true,
-    "module": "ESNext",
-    "target": "ES6",
+    "module": "Node16",
+    "target": "ES2020",
     "jsx": "react",
     "esModuleInterop": true,
     "strict": true,
