--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@eslint/js": "^9.15.0",
     "@types/node": "^22.13.10",
     "@types/react": "^18.3.16",
+    "@types/react-cropper": "^2.0.0",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
