--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/html2canvas": "^1.0.0",
     "@types/node": "^22.13.10",
     "@types/react": "^18.3.16",
     "@types/react-cropper": "^2.0.0",
