--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.4.0",
     "@types/draft-js": "^0.11.18",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@vercel/analytics": "^1.5.0",
     "cropperjs": "^1.6.2",
     "draft-js": "^0.11.7",
     "framer-motion": "^11.13.1",
